Restructure HTML Code, Included Reset File CSS

--- a/index.html
+++ b/index.html
@@ -6,19 +6,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin-Dashboard</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="grid-container">
-        <div class="grid-item-1">
-
-        </div>
-        <div class="grid-item-2">
-
-        </div>
-        <div class="grid-item-3">
-            
-        </div>
+    <div class="container">
+        <header class="header">
+            <div class="left-side">
+                <ul>
+                    <li>
+                        <img src="" alt="Search Icon">
+                        <input type="search">
+                    </li>
+                    <li>
+                        <img src="" alt="Profile Icon">
+                        <p>Hi there,</p>
+                        <h3>Jimmy Jimenez (@jimmy)</h3>
+                    </li>
+                </ul>
+            </div>
+            <div class="right-side">
+                <ul>
+                    <li>
+                        <img src="" alt="bell-icon">
+                        <img src="" alt="profile pic">
+                        <h4>Jimmy Jimenez</h4>
+                    </li>
+                    <li>
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <nav class="side">
+            <div class="logo">
+                <img src="" alt="logo-icon">
+                <h2>Dashboard</h2>
+            </div>
+            <div class="main-links">
+                <ul>
+                    <li>
+                        <img src="" alt="home-icon">
+                        <p>Home</p>
+                    </li>
+                    <li>
+                        <img src="" alt="profile-icon">
+                        <p>Profile</p>
+                    </li>
+                    <li>
+                        <img src="" alt="message-icon">
+                        <p>Messages</p>
+                    </li>
+                    <li>
+                        <img src="" alt="history-icon">
+                        <p>History</p>
+                    </li>
+                    <li>
+                        <img src="" alt="tasks-icon">
+                        <p>Tasks</p>
+                    </li>
+                    <li>
+                        <img src="" alt="communities-icon">
+                        <p>Communities</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="secondary-links">
+                <ul>
+                    <li>
+                        <img src="" alt="settings-icon">
+                        <p>Settings</p>
+                    </li>
+                    <li>
+                        <img src="" alt="support-icon">
+                        <p>Support</p>
+                    </li>
+                    <li>
+                        <img src="" alt="privacy-icons">
+                        <p>Privacy</p>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main class="main-content">
+            <div class="project-container">
+                <h3>Your Projects</h3>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
+                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
+                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
+                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
+                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
+                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
+                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                </div>
+            </div>
+            <div class="announcements">
+                <h3>Announcements</h3>
+                <ul>
+                    <li>
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, eligendi neque? Omnis quia libero deserunt neque laborum dignissimos reprehenderit soluta! Possimus iusto, at vitae consectetur nesciunt reprehenderit non consequatur fuga.</p>
+                    </li>
+                    <li>
+                        <h4>Community Share Day</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium, corporis sed incidunt reprehenderit quasi dicta voluptates nobis laboriosam officiis ullam molestias numquam sit eum, adipisci rerum dolorem placeat ducimus!</p>
+                    </li>
+                    <li>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque laudantium dolore aspernatur! Non labore ipsa voluptate officiis quo consequuntur dignissimos, obcaecati a perspiciatis iure illo. Molestiae ducimus accusamus nihil voluptas?</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="trending">
+                <ul>
+                    <li>
+                        <img src="" alt="profile-icon">
+                        <p>@tegan</p>
+                        <p>World Peace Builder</p>
+                    </li>
+                    <li>
+                        <img src="" alt="profile-icon">
+                        <p>@morgan</p>
+                        <p>Super Cool Project</p>
+                    </li>
+                    <li>
+                        <img src="" alt="profile-icon">
+                        <p>@kendall</p>
+                        <p>Life Changing App</p>
+                    </li>
+                    <li>
+                        <img src="" alt="profile-icon">
+                        <p>@alex</p>
+                        <p>No Traffic Maker</p>
+                    </li>
+                </ul>
+            </div>
+        </main>
     </div>
 </body>
 
