Polish Structure Of HTML

--- a/index.html
+++ b/index.html
@@ -99,79 +99,119 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                    <div class="special-icons">
+                        <img src="" alt="star-icon">
+                        <img src="" alt="eye-icon">
+                        <img src="" alt="triangle-icon">
+                    </div>
                 </div>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                    <div class="special-icons">
+                        <img src="" alt="star-icon">
+                        <img src="" alt="eye-icon">
+                        <img src="" alt="triangle-icon">
+                    </div>
                 </div>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                    <div class="special-icons">
+                        <img src="" alt="star-icon">
+                        <img src="" alt="eye-icon">
+                        <img src="" alt="triangle-icon">
+                    </div>
                 </div>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                    <div class="special-icons">
+                        <img src="" alt="star-icon">
+                        <img src="" alt="eye-icon">
+                        <img src="" alt="triangle-icon">
+                    </div>
                 </div>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                    <div class="special-icons">
+                        <img src="" alt="star-icon">
+                        <img src="" alt="eye-icon">
+                        <img src="" alt="triangle-icon">
+                    </div>
                 </div>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                    <div class="special-icons">
+                        <img src="" alt="star-icon">
+                        <img src="" alt="eye-icon">
+                        <img src="" alt="triangle-icon">
+                    </div>
                 </div>
             </div>
-            <div class="announcements">
-                <h3>Announcements</h3>
-                <ul>
-                    <li>
-                        <h4>Site Maintenance</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, eligendi neque? Omnis quia libero deserunt neque laborum dignissimos reprehenderit soluta! Possimus iusto, at vitae consectetur nesciunt reprehenderit non consequatur fuga.</p>
-                    </li>
-                    <li>
-                        <h4>Community Share Day</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium, corporis sed incidunt reprehenderit quasi dicta voluptates nobis laboriosam officiis ullam molestias numquam sit eum, adipisci rerum dolorem placeat ducimus!</p>
-                    </li>
-                    <li>
-                        <h4>Updated Privacy Policy</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque laudantium dolore aspernatur! Non labore ipsa voluptate officiis quo consequuntur dignissimos, obcaecati a perspiciatis iure illo. Molestiae ducimus accusamus nihil voluptas?</p>
-                    </li>
-                </ul>
+            <div class="right-side">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <ul>
+                        <li>
+                            <h4>Site Maintenance</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, eligendi neque? Omnis
+                                quia libero deserunt neque laborum dignissimos reprehenderit soluta! Possimus iusto, at
+                                vitae consectetur nesciunt reprehenderit non consequatur fuga.</p>
+                        </li>
+                        <li>
+                            <h4>Community Share Day</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium, corporis sed
+                                incidunt reprehenderit quasi dicta voluptates nobis laboriosam officiis ullam molestias
+                                numquam sit eum, adipisci rerum dolorem placeat ducimus!</p>
+                        </li>
+                        <li>
+                            <h4>Updated Privacy Policy</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque laudantium dolore
+                                aspernatur! Non labore ipsa voluptate officiis quo consequuntur dignissimos, obcaecati a
+                                perspiciatis iure illo. Molestiae ducimus accusamus nihil voluptas?</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <ul>
+                        <li>
+                            <img src="" alt="profile-icon">
+                            <p>@tegan</p>
+                            <p>World Peace Builder</p>
+                        </li>
+                        <li>
+                            <img src="" alt="profile-icon">
+                            <p>@morgan</p>
+                            <p>Super Cool Project</p>
+                        </li>
+                        <li>
+                            <img src="" alt="profile-icon">
+                            <p>@kendall</p>
+                            <p>Life Changing App</p>
+                        </li>
+                        <li>
+                            <img src="" alt="profile-icon">
+                            <p>@alex</p>
+                            <p>No Traffic Maker</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="trending">
-                <ul>
-                    <li>
-                        <img src="" alt="profile-icon">
-                        <p>@tegan</p>
-                        <p>World Peace Builder</p>
-                    </li>
-                    <li>
-                        <img src="" alt="profile-icon">
-                        <p>@morgan</p>
-                        <p>Super Cool Project</p>
-                    </li>
-                    <li>
-                        <img src="" alt="profile-icon">
-                        <p>@kendall</p>
-                        <p>Life Changing App</p>
-                    </li>
-                    <li>
-                        <img src="" alt="profile-icon">
-                        <p>@alex</p>
-                        <p>No Traffic Maker</p>
-                    </li>
-                </ul>
-            </div>
+
         </main>
     </div>
 </body>
