Polish HTML Structure, Adding New Classes And Div's

--- a/index.html
+++ b/index.html
@@ -15,28 +15,34 @@
         <header class="header">
             <div class="left-side">
                 <ul>
-                    <li>
+                    <li class="left-side-top">
                         <img src="" alt="Search Icon">
                         <input type="search">
                     </li>
-                    <li>
+                    <li class="left-side-bottom">
                         <img src="" alt="Profile Icon">
                         <p>Hi there,</p>
-                        <h3>Jimmy Jimenez (@jimmy)</h3>
+                        <h2>Jimmy Jimenez (@jimmy)</h2>
                     </li>
                 </ul>
             </div>
             <div class="right-side">
                 <ul>
-                    <li>
+                    <li class="right-side-top">
                         <img src="" alt="bell-icon">
                         <img src="" alt="profile pic">
                         <h4>Jimmy Jimenez</h4>
                     </li>
-                    <li>
-                        <button>New</button>
-                        <button>Upload</button>
-                        <button>Share</button>
+                    <li class="right-side-bottom">
+                        <div class="button">
+                            <button>New</button>
+                        </div>
+                        <div class="button">
+                            <button>Upload</button>
+                        </div>
+                        <div class="button">
+                            <button>Share</button>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -44,7 +50,7 @@
         <nav class="side">
             <div class="logo">
                 <img src="" alt="logo-icon">
-                <h2>Dashboard</h2>
+                <h3>Dashboard</h3>
             </div>
             <div class="main-links">
                 <ul>
@@ -93,7 +99,7 @@
         </nav>
         <main class="main-content">
             <div class="project-container">
-                <h3>Your Projects</h3>
+                <h4>Your Projects</h4>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
@@ -161,9 +167,9 @@
                     </div>
                 </div>
             </div>
-            <div class="right-side">
+            <div class="announcement-trending-container">
                 <div class="announcements">
-                    <h3>Announcements</h3>
+                    <h4>Announcements</h4>
                     <ul>
                         <li>
                             <h4>Site Maintenance</h4>
@@ -186,7 +192,7 @@
                     </ul>
                 </div>
                 <div class="trending">
-                    <h3>Trending</h3>
+                    <h4>Trending</h4>
                     <ul>
                         <li>
                             <img src="" alt="profile-icon">
