Add Img Folder, Svg-Icons, And Polish Grid Items

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
             <div class="left-side">
                 <ul>
                     <li class="left-side-top">
-                        <img src="" alt="Search Icon">
+                        <img src="./svg-icons/magnify.png" alt="Search Icon">
                         <input type="search">
                     </li>
                     <li class="left-side-bottom">
-                        <img src="" alt="Profile Icon">
-                        <p>Hi there,</p>
-                        <h2>Jimmy Jimenez (@jimmy)</h2>
+                        <img src="./img/profile.jpg" alt="Profile Icon" class="profile-pic-img-big">
+                        <div class="name">
+                            <p>Hi there,</p>
+                            <h2>Jimmy Jimenez (@jimmy)</h2>
+                        </div>
+
                     </li>
                 </ul>
             </div>
             <div class="right-side">
                 <ul>
                     <li class="right-side-top">
-                        <img src="" alt="bell-icon">
-                        <img src="" alt="profile pic">
+                        <img src="./svg-icons/bell-alert (1).png" alt="bell-icon" class="bell-img">
+                        <img src="./img/profile.jpg" alt="profile pic" class="profile-pic-img-small">
                         <h4>Jimmy Jimenez</h4>
                     </li>
                     <li class="right-side-bottom">
@@ -49,33 +52,33 @@
         </header>
         <nav class="side">
             <div class="logo">
-                <img src="" alt="logo-icon">
+                <img src="./svg-icons/controller (1).png" alt="logo-icon">
                 <h3>Dashboard</h3>
             </div>
             <div class="main-links">
                 <ul>
                     <li>
-                        <img src="" alt="home-icon">
+                        <img src="./svg-icons/home (3).png" alt="home-icon">
                         <p>Home</p>
                     </li>
                     <li>
-                        <img src="" alt="profile-icon">
+                        <img src="./svg-icons/account.png" alt="profile-icon">
                         <p>Profile</p>
                     </li>
                     <li>
-                        <img src="" alt="message-icon">
+                        <img src="./svg-icons/message-badge.png" alt="message-icon">
                         <p>Messages</p>
                     </li>
                     <li>
-                        <img src="" alt="history-icon">
+                        <img src="./svg-icons/history.png" alt="history-icon">
                         <p>History</p>
                     </li>
                     <li>
-                        <img src="" alt="tasks-icon">
+                        <img src="./svg-icons/alert-circle-check.png" alt="tasks-icon">
                         <p>Tasks</p>
                     </li>
                     <li>
-                        <img src="" alt="communities-icon">
+                        <img src="./svg-icons/account-group.png" alt="communities-icon">
                         <p>Communities</p>
                     </li>
                 </ul>
@@ -83,15 +86,15 @@
             <div class="secondary-links">
                 <ul>
                     <li>
-                        <img src="" alt="settings-icon">
+                        <img src="./svg-icons/cog.png" alt="settings-icon">
                         <p>Settings</p>
                     </li>
                     <li>
-                        <img src="" alt="support-icon">
+                        <img src="./svg-icons/face-agent.png" alt="support-icon">
                         <p>Support</p>
                     </li>
                     <li>
-                        <img src="" alt="privacy-icons">
+                        <img src="./svg-icons/eye-settings.png" alt="privacy-icons">
                         <p>Privacy</p>
                     </li>
                 </ul>
@@ -99,16 +102,35 @@
         </nav>
         <main class="main-content">
             <div class="project-container">
-                <h4>Your Projects</h4>
+                <h3>Your Projects</h3>
                 <div class="project">
                     <p class="title">Super Cool Project</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
-                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
-                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
+                        consequuntur voluptatum perspiciatis...</p>
                     <div class="special-icons">
-                        <img src="" alt="star-icon">
-                        <img src="" alt="eye-icon">
-                        <img src="" alt="triangle-icon">
+                        <img src="./svg-icons/star.png" alt="star-icon">
+                        <img src="./svg-icons/eye-outline.png" alt="eye-icon">
+                        <img src="./svg-icons/share.png" alt="triangle-icon">
+                    </div>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis...</p>
+                    <div class="special-icons">
+                        <img src="./svg-icons/star.png" alt="star-icon">
+                        <img src="./svg-icons/eye-outline.png" alt="eye-icon">
+                        <img src="./svg-icons/share.png" alt="triangle-icon">
+                    </div>
+                </div>
+                <div class="project">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
+                        consequuntur voluptatum perspiciatis...</p>
+                    <div class="special-icons">
+                        <img src="./svg-icons/star.png" alt="star-icon">
+                        <img src="./svg-icons/eye-outline.png" alt="eye-icon">
+                        <img src="./svg-icons/share.png" alt="triangle-icon">
                     </div>
                 </div>
                 <div class="project">
@@ -117,9 +139,9 @@
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
                     <div class="special-icons">
-                        <img src="" alt="star-icon">
-                        <img src="" alt="eye-icon">
-                        <img src="" alt="triangle-icon">
+                        <img src="./svg-icons/star.png" alt="star-icon">
+                        <img src="./svg-icons/eye-outline.png" alt="eye-icon">
+                        <img src="./svg-icons/share.png" alt="triangle-icon">
                     </div>
                 </div>
                 <div class="project">
@@ -128,9 +150,9 @@
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
                     <div class="special-icons">
-                        <img src="" alt="star-icon">
-                        <img src="" alt="eye-icon">
-                        <img src="" alt="triangle-icon">
+                        <img src="./svg-icons/star.png" alt="star-icon">
+                        <img src="./svg-icons/eye-outline.png" alt="eye-icon">
+                        <img src="./svg-icons/share.png" alt="triangle-icon">
                     </div>
                 </div>
                 <div class="project">
@@ -139,80 +161,63 @@
                         consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
                         neque, incidunt quibusdam non id corrupti unde tempora!</p>
                     <div class="special-icons">
-                        <img src="" alt="star-icon">
-                        <img src="" alt="eye-icon">
-                        <img src="" alt="triangle-icon">
-                    </div>
-                </div>
-                <div class="project">
-                    <p class="title">Super Cool Project</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
-                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
-                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
-                    <div class="special-icons">
-                        <img src="" alt="star-icon">
-                        <img src="" alt="eye-icon">
-                        <img src="" alt="triangle-icon">
-                    </div>
-                </div>
-                <div class="project">
-                    <p class="title">Super Cool Project</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae rerum voluptatem dicta deserunt
-                        consequuntur voluptatum perspiciatis. Consequatur recusandae esse sapiente? Reiciendis ipsa
-                        neque, incidunt quibusdam non id corrupti unde tempora!</p>
-                    <div class="special-icons">
-                        <img src="" alt="star-icon">
-                        <img src="" alt="eye-icon">
-                        <img src="" alt="triangle-icon">
+                        <img src="./svg-icons/star.png" alt="star-icon">
+                        <img src="./svg-icons/eye-outline.png" alt="eye-icon">
+                        <img src="./svg-icons/share.png" alt="triangle-icon">
                     </div>
                 </div>
             </div>
             <div class="announcement-trending-container">
                 <div class="announcements">
-                    <h4>Announcements</h4>
+                    <h3>Announcements</h3>
                     <ul>
                         <li>
                             <h4>Site Maintenance</h4>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, eligendi neque? Omnis
-                                quia libero deserunt neque laborum dignissimos reprehenderit soluta! Possimus iusto, at
-                                vitae consectetur nesciunt reprehenderit non consequatur fuga.</p>
+                                quia libero deserunt neque laborum...</p>
                         </li>
                         <li>
                             <h4>Community Share Day</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium, corporis sed
-                                incidunt reprehenderit quasi dicta voluptates nobis laboriosam officiis ullam molestias
-                                numquam sit eum, adipisci rerum dolorem placeat ducimus!</p>
+                                incidunt reprehenderit quasi dicta...</p>
                         </li>
                         <li>
                             <h4>Updated Privacy Policy</h4>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque laudantium dolore
-                                aspernatur! Non labore ipsa voluptate officiis quo consequuntur dignissimos, obcaecati a
-                                perspiciatis iure illo. Molestiae ducimus accusamus nihil voluptas?</p>
+                                aspernatur! Non labore ipsa voluptate officiis...</p>
                         </li>
                     </ul>
                 </div>
                 <div class="trending">
-                    <h4>Trending</h4>
+                    <h3>Trending</h3>
                     <ul>
                         <li>
-                            <img src="" alt="profile-icon">
-                            <p>@tegan</p>
-                            <p>World Peace Builder</p>
+                            <img src="./img/dog.jpg" alt="profile-icon" class="trending-img-icon">
+                            <div class="name-project">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
                         </li>
                         <li>
-                            <img src="" alt="profile-icon">
-                            <p>@morgan</p>
-                            <p>Super Cool Project</p>
+                            <img src="./img/fox.jpg" alt="profile-icon" class="trending-img-icon">
+                            <div class="name-project">
+                                <p>@morgan</p>
+                                <p>Super Cool Project</p>
+                            </div>
                         </li>
                         <li>
-                            <img src="" alt="profile-icon">
-                            <p>@kendall</p>
-                            <p>Life Changing App</p>
+                            <img src="./img/astro.jpg" alt="profile-icon" class="trending-img-icon">
+                            <div class="name-project">
+                                <p>@juan</p>
+                                <p>Super Cool Project</p>
+                            </div>
                         </li>
                         <li>
-                            <img src="" alt="profile-icon">
-                            <p>@alex</p>
-                            <p>No Traffic Maker</p>
+                            <img src="./img/duck.jpg" alt="profile-icon" class="trending-img-icon">
+                            <div class="name-project">
+                                <p>@alex</p>
+                                <p>No Traffic Maker</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
